CU-86er47ecc - floating ad echelon Home page and paginations

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,7 +22,7 @@
 
 :root {
 
-  
+
   --max-width: 1100;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -126,8 +126,8 @@ body {
   /* Firefox */
 }
 
-.gpt-dev-icon{
-  display:none;
+.gpt-dev-icon {
+  display: none;
 }
 
 body {
@@ -527,21 +527,22 @@ b {
   cursor: pointer;
 }
 
-.navbar-bottom-wrapper nav { 
+.navbar-bottom-wrapper nav {
   margin-top: -0.0018%;
-  
+
   ul li {
-  white-space: nowrap;
-  font-family: "Outfit", sans-serif;
-  font-size: 0.89vw;
-  font-weight: 500;
-  letter-spacing: 1.2px;
-  line-height: 4px;
-  text-transform: uppercase;
-  padding: 1.5% 1.5% 0%;
-  display: block;
-  color: #fff;
-}}
+    white-space: nowrap;
+    font-family: "Outfit", sans-serif;
+    font-size: 0.89vw;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+    line-height: 4px;
+    text-transform: uppercase;
+    padding: 1.5% 1.5% 0%;
+    display: block;
+    color: #fff;
+  }
+}
 
 .navbar-bottom-wrapper nav ul li a:hover {
   color: #f4f4f4;
@@ -616,6 +617,48 @@ nav {
 //   border: 1px solid yellow;
 //   align-items: right;
 // }
+
+
+
+.section-container {
+  
+  // Ensure the container is tall enough to scroll:
+  min-height: 150vh; // Adjust as needed for testing
+
+  .home-second-section-right-main-wrapper {
+    grid-column: 40%;
+
+    .home-second-section-right-side-container {
+      position: absolute;
+      // width: 20.8%;
+      right: 8%;
+
+    }
+
+    .home-second-section-right-side-content {
+      position: sticky;
+      top: 10%;
+      height: fit-content;
+      .ad-box{
+      background: red;
+      height: 500px;
+      width: 300px;
+    }
+    }
+  }
+
+  .home-second-section-left-side-container {
+    grid-column: 1;
+    text-align: left;
+    width: 70%;
+
+    
+  }
+}
+
+
+
+
 
 /* popular-list */
 
@@ -949,7 +992,7 @@ nav {
 //pagination-bar
 
 .pagination-bar {
-  margin: 1% 40% 1% 5%;
+  margin: 1% 35% 1% 8%;
 }
 
 /* Footer */
@@ -1074,7 +1117,8 @@ footer {
 .footer-news-letter-social-media-icons {
   display: flex;
   // width: 30%;
-justify-content: center;}
+  justify-content: center;
+}
 
 .footer-social-media-icons {
   font-size: 16px;
@@ -1141,11 +1185,13 @@ justify-content: center;}
   padding-bottom: 1%;
   // border-bottom: #37353578 solid 1px;
 }
-.dropcap{
+
+.dropcap {
   font-size: 4rem;
   font-weight: bold;
   font-family: var(--image-caption-font);
 }
+
 .story-post-content {
   display: flex;
   margin: 0% 0% 7% 5%;
@@ -1282,8 +1328,8 @@ justify-content: center;}
 
   .wp-caption-text {
     font-size: 1.2vw;
-      margin-top: 0%;
-      line-height: 1.3;
+    margin-top: 0%;
+    line-height: 1.3;
     color: gray;
   }
 }
@@ -1386,8 +1432,9 @@ p strong {
   position: "relative";
   bottom: "10px";
   top: "30px";
-  .list-header{
-    .home-popular-header{
+
+  .list-header {
+    .home-popular-header {
       color: white !important;
     }
   }
@@ -2103,9 +2150,9 @@ p strong {
 
 //1st Ad
 
-.ad-one{
+.ad-one {
   position: relative;
-   bottom: 0%;
+  bottom: 0%;
   margin: 0% 0% 8% 0%;
 }
 
@@ -2154,7 +2201,8 @@ p strong {
   // top: -57%;
   display: block;
 }
-.ad-two{
+
+.ad-two {
 
   position: relative;
   bottom: 10px;
@@ -2429,6 +2477,14 @@ p strong {
     display: block;
   }
 
+  .home-second-section-left-side-container {
+    width: 100% !important;
+  }
+
+  .main-section-2 {
+    display: block;
+  }
+
   .desktop-left-side {
     width: 100%;
   }
@@ -2641,16 +2697,20 @@ p strong {
     height: fit-content;
     width: auto;
   }
-.footer-social-media-icons {
-  margin-left: 3vw;
-}
+
+  .footer-social-media-icons {
+    margin-left: 3vw;
+  }
+
   .see-more-button-wrapper {
     margin: 0% 10% 2%;
     text-wrap: nowrap;
   }
-.fotter-column-first{
-  margin-left: 0;
-}
+
+  .fotter-column-first {
+    margin-left: 0;
+  }
+
   .fotter-column-first ul {
     // display: block;
     justify-content: center;
@@ -2658,10 +2718,10 @@ p strong {
     li {
       display: none;
 
-      a{
+      a {
         font-size: 8px;
         margin-left: 0;
-        padding-left:10px;
+        padding-left: 10px;
         text-decoration: underline;
       }
     }
@@ -3892,10 +3952,11 @@ p strong {
     text-wrap: wrap;
   }
 
-  .popular-relative-story{
+  .popular-relative-story {
     top: 0vh !important;
-    .list-header{
-      .home-popular-header{
+
+    .list-header {
+      .home-popular-header {
         color: white !important;
       }
     }
@@ -8840,8 +8901,8 @@ p strong {
 @media screen and (min-width: 1900px) {
 
   //navabar - style
-  .navbar-bottom-wrapper{
-padding: 0 10%;
+  .navbar-bottom-wrapper {
+    padding: 0 10%;
   }
 
 
