Story page update floating ad

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -630,8 +630,9 @@ nav {
     .home-second-section-right-side-container {
       position: absolute;
       // width: 20.8%;
-      right: 7%;
+      right: 11%;
       width: 30%;
+      max-width: 375px;
 
     }
 
